{
    "name": "PlayerActionAssets",
    "maps": [
        {
            "name": "Player",
            "id": "d4592651-408b-4ef8-9bf2-85f3c7d2e7d6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2bc4499a-6dd0-4da9-8624-7a8e5075c713",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "772f0019-3835-4ca4-8658-a2d490445a2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FallDown",
                    "type": "Button",
                    "id": "7cdf8376-3094-4e6a-bf1d-662c93a8f619",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left Right Arrow",
                    "id": "5b65717f-4b9f-4271-857f-7b0db4e26215",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "95804fc4-d823-40d0-afbb-e12604d4812d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "83cc3a7e-d6e0-4914-90e4-f8cf0b029c9a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "147c4e8e-36bb-4e23-ad58-3a7d4fc6b730",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6347aa7d-ff3a-4c86-a3bc-1160e182e58d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "FallDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}